dimagi-SalesforceFB/src/objects/Accounting_BillingAccountAdmin__c.object
<CustomObject>
    <fields>
        <fullName>domain__c</fullName>
        <label>domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>web_user__c</fullName>
        <label>web_user</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accounting_BillingAccountAdmin</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting_BillingAccountAdmin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>